--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  flutter_appauth: ^2.0.0-dev.3
+  flutter_appauth: ^2.4.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
